--- a/bao-viet-trach-nhiem-cong-dong.html
+++ b/bao-viet-trach-nhiem-cong-dong.html
@@ -1,86 +1,143 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- Primary SEO Meta Tags -->
-  <title>Có nên mua Bảo hiểm sức khỏe Bảo Việt? Quyền lợi & Bảng giá 2025</title>
+  <title>Bảo Việt và Trách Nhiệm Cộng Đồng tại Đà Nẵng - Hành Trình Nhân Ái Vì Cộng Đồng</title>
   <meta name="description"
-    content="Có nên mua bảo hiểm sức khỏe Bảo Việt năm 2025? Cùng Bảo Việt Đà Nẵng khám phá chi tiết quyền lợi, bảng giá, các gói như An Gia, Intercare. Tư vấn miễn phí 24/7: 0905.499.496">
+    content="Khám phá hành trình trách nhiệm cộng đồng của Bảo Việt Đà Nẵng với các chương trình thiện nguyện, giáo dục, chăm sóc sức khỏe và cứu trợ thiên tai. Chung tay vì cộng đồng, lan tỏa yêu thương.">
   <meta name="keywords"
-    content="bảo hiểm sức khỏe Bảo Việt, có nên mua bảo hiểm Bảo Việt, quyền lợi bảo hiểm sức khỏe, bảng giá bảo hiểm Bảo Việt 2025, Bảo Việt An Gia, Intercare, bảo hiểm sức khỏe Đà Nẵng">
-  <meta name="author" content="Bảo Hiểm Bảo Việt Đà Nẵng">
-  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+    content="Bảo Việt Đà Nẵng, trách nhiệm cộng đồng, thiện nguyện, giáo dục, chăm sóc sức khỏe, cứu trợ thiên tai, bảo hiểm Bảo Việt">
+  <meta name="author" content="Bảo Việt Đà Nẵng">
+  <meta name="robots" content="index, follow">
+  <meta name="theme-color" content="#064278">
 
   <!-- Canonical URL -->
-  <link rel="canonical" href="https://baohiembaovietdanang.vn/tin-tuc/bao-hiem-suc-khoe-bao-viet-2025">
+  <link rel="canonical" href="https://baohiembaovietdanang.vn/bao-viet-trach-nhiem-cong-dong.html">
 
-  <!-- Language and Location -->
-  <meta name="geo.region" content="VN-DN">
-  <meta name="geo.placename" content="Đà Nẵng, Việt Nam">
-  <meta name="geo.position" content="16.0544;108.2022">
-  <meta name="ICBM" content="16.0544, 108.2022">
-
-  <!-- Open Graph / Facebook -->
-  <meta property="og:type" content="article">
-  <meta property="og:url" content="https://baohiembaovietdanang.vn/tin-tuc/bao-hiem-suc-khoe-bao-viet-2025">
-  <meta property="og:site_name" content="Bảo Hiểm Bảo Việt Đà Nẵng">
-  <meta property="og:title" content="Có nên mua Bảo hiểm sức khỏe Bảo Việt? Bảng giá & Quyền lợi 2025">
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="Bảo Việt và Trách Nhiệm Cộng Đồng tại Đà Nẵng - Hành Trình Nhân Ái">
   <meta property="og:description"
-    content="Tư vấn chi tiết bảo hiểm sức khỏe Bảo Việt năm 2025 – quyền lợi, bảng giá, điều kiện & lưu ý quan trọng. Hotline: 0905.499.496">
-  <meta property="og:image" content="https://baohiembaovietdanang.vn/assets/images/bao-hiem-suc-khoe-2025.jpg">
-  <meta property="og:image:width" content="1200">
-  <meta property="og:image:height" content="630">
-  <meta property="og:image:alt" content="Bảo hiểm sức khỏe Bảo Việt - Toàn diện 2025">
+    content="Khám phá hành trình trách nhiệm cộng đồng của Bảo Việt Đà Nẵng với các chương trình thiện nguyện, giáo dục, chăm sóc sức khỏe và cứu trợ thiên tai.">
+  <meta property="og:image" content="https://baohiembaovietdanang.vn/assets/tin-tuc/trachnhiemcongdong/image2.jpg">
+  <meta property="og:url" content="https://baohiembaovietdanang.vn/bao-viet-trach-nhiem-cong-dong.html">
+  <meta property="og:type" content="article">
+  <meta property="og:site_name" content="Bảo Việt Đà Nẵng">
   <meta property="og:locale" content="vi_VN">
 
-  <!-- Twitter -->
+  <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:url" content="https://baohiembaovietdanang.vn/tin-tuc/bao-hiem-suc-khoe-bao-viet-2025">
-  <meta name="twitter:title" content="Có nên mua Bảo hiểm sức khỏe Bảo Việt? Bảng giá & Quyền lợi 2025">
+  <meta name="twitter:title" content="Bảo Việt và Trách Nhiệm Cộng Đồng tại Đà Nẵng">
   <meta name="twitter:description"
-    content="Khám phá chi tiết quyền lợi, bảng giá, quy trình bồi thường và hướng dẫn mua Bảo hiểm sức khỏe Bảo Việt năm 2025.">
-  <meta name="twitter:image" content="https://baohiembaovietdanang.vn/assets/images/bao-hiem-suc-khoe-2025.jpg">
-  <meta name="twitter:image:alt" content="Bảo Việt Đà Nẵng - Bảo hiểm sức khỏe 2025">
+    content="Khám phá hành trình trách nhiệm cộng đồng của Bảo Việt Đà Nẵng với các chương trình thiện nguyện vì cộng đồng.">
+  <meta name="twitter:image" content="https://baohiembaovietdanang.vn/assets/tin-tuc/trachnhiemcongdong/image2.jpg">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="https://baohiembaovietdanang.vn/assets/favicon-32x32.png" sizes="32x32">
-  <link rel="icon" type="image/png" href="https://baohiembaovietdanang.vn/assets/favicon-16x16.png" sizes="16x16">
-  <link rel="apple-touch-icon" sizes="180x180" href="https://baohiembaovietdanang.vn/assets/apple-touch-icon.png">
+  <link rel="icon" type="image/png" href="https://baohiembaovietdanang.vn/assets/logo.png" sizes="32x32" />
   <link rel="shortcut icon" href="https://baovietonline.com.vn/favicon.ico">
+  <link rel="apple-touch-icon" href="https://baohiembaovietdanang.vn/assets/logo.png">
 
-  <!-- Preload Critical Resources -->
-  <link rel="preload" href="/style.css" as="style">
-  <link rel="stylesheet" href="/style.css">
+  <!-- Manifest for PWA -->
+  <link rel="manifest" href="/manifest.json">
+
+  <!-- Stylesheet -->
+  <link rel="stylesheet" href="/style.css" />
+
+  <style>
+    .c4,
+    .c3,
+    .c15,
+    .c14 {
+      text-align: left;
+    }
+  </style>
+
+  <!-- Structured Data - Organization -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Bảo Việt Đà Nẵng",
+    "url": "https://baohiembaovietdanang.vn",
+    "logo": "https://baohiembaovietdanang.vn/assets/logo.png",
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "telephone": "+84905499496",
+      "contactType": "customer service",
+      "availableLanguage": "Vietnamese"
+    },
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Đà Nẵng",
+      "addressCountry": "VN"
+    },
+    "sameAs": [
+      "https://facebook.com/baovietdanang",
+      "https://zalo.me/84931909697"
+    ]
+  }
+  </script>
 
   <!-- Structured Data - Article -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "Article",
-    "headline": "Có nên mua bảo hiểm sức khỏe Bảo Việt? Chi tiết quyền lợi & bảng giá 2025",
-    "description": "Bài viết phân tích chi tiết các quyền lợi, chi phí và điều kiện mua bảo hiểm sức khỏe Bảo Việt năm 2025. Hướng dẫn đầy đủ từ A-Z.",
-    "image": "https://baohiembaovietdanang.vn/assets/images/bao-hiem-suc-khoe-2025.jpg",
+    "headline": "Chung tay vì cộng đồng: Bảo Việt Đà Nẵng và hành trình nhân ái trên mọi nẻo đường",
+    "description": "Khám phá hành trình trách nhiệm cộng đồng của Bảo Việt Đà Nẵng với các chương trình thiện nguyện, giáo dục, chăm sóc sức khỏe và cứu trợ thiên tai.",
+    "image": "https://baohiembaovietdanang.vn/assets/tin-tuc/trachnhiemcongdong/image2.jpg",
     "author": {
       "@type": "Organization",
-      "name": "Bảo Hiểm Bảo Việt Đà Nẵng"
+      "name": "Bảo Việt Đà Nẵng"
     },
     "publisher": {
       "@type": "Organization",
-      "name": "Bảo Hiểm Bảo Việt Đà Nẵng",
+      "name": "Bảo Việt Đà Nẵng",
       "logo": {
         "@type": "ImageObject",
-        "url": "https://baovietonline.com.vn/templates/images/logo2x.png"
+        "url": "https://baohiembaovietdanang.vn/assets/logo.png"
       }
     },
-    "datePublished": "2025-05-24",
-    "dateModified": "2025-05-25"
+    "datePublished": "2025-05-28",
+    "dateModified": "2025-07-06",
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://baohiembaovietdanang.vn/bao-viet-trach-nhiem-cong-dong.html"
+    },
+    "articleSection": "Hoạt động tập đoàn",
+    "keywords": "Bảo Việt Đà Nẵng, trách nhiệm cộng đồng, thiện nguyện, giáo dục, chăm sóc sức khỏe"
+  }
+  </script>
+
+  <!-- Structured Data - BreadcrumbList -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Trang chủ",
+        "item": "https://baohiembaovietdanang.vn"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Tin tức",
+        "item": "https://baohiembaovietdanang.vn/tin-tuc.html"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Bảo Việt và trách nhiệm cộng đồng tại Đà Nẵng",
+        "item": "https://baohiembaovietdanang.vn/bao-viet-trach-nhiem-cong-dong.html"
+      }
+    ]
   }
   </script>
 </head>
-
 
 <body>
 
@@ -148,20 +205,14 @@
     <div class="breadcrumb" style="margin-top: 100px;">
       <a href="#">TRANG CHỦ</a> • <a href="#">TIN TỨC</a> - <a href="#">SỰ KIỆN</a>
     </div>
-    <h1><strong><span style="font-size:23pt;font-family:Arial,sans-serif;">Chung tay vì cộng đồng: Bảo Việt Đà Nẵng và
-          hành trình nhân ái trên mọi nẻo đường</span></strong></h1>
+    <h1 class="title-new">Chung tay vì cộng đồng: Bảo Việt Đà Nẵng và hành trình nhân ái trên mọi nẻo đường</h1>
     <div class="meta-info" style=" border-bottom: 1px solid rgba(0, 0, 0, 0.219); padding-bottom: 20px;">
-      <span class="category">TIN TỨC</span>
-      <span class="date">24.05.2025</span>
+      <span class="category">Hoạt động tập đoàn</span>
+      <span class="date">28.05.2025</span>
     </div>
 
-    <div style="max-width: 900px; margin: auto; padding-top: 20px;">
-      <div class="c19 doc-content">
-        <h1 class="c17" id="h.cz4x9h6mj04i"><span
-            style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 601.70px; height: 338.67px;"><img
-              alt="" src="images/image2.jpg"
-              style="width: 601.70px; height: 338.67px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
-              title=""></span></h1>
+    <div style="max-width: 900px; margin: auto;">
+      <div class="c19 doc-content" style="text-align: center;">
         <p class="c4"><span>Bảo Hiểm dưới góc nhìn quen thuộc xưa nay là giải pháp quản trị rủi ro tài chính, giúp bảo
             vệ tài
             sản và lợi ích của con người, nhưng ở một góc nhìn khác Bảo hiểm còn mang ý nghĩa tinh thần sẻ chia và trách
@@ -201,8 +252,8 @@
         <p class="c4 c7"><span class="c2"></span></p>
         <p class="c14"><span
             style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 601.70px; height: 338.67px;"><img
-              alt="" src="images/image4.jpg"
-              style="width: 601.70px; height: 338.67px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
+              alt="" src="assets/tin-tuc/trachnhiemcongdong/image4.jpg"
+              style="width:100%; height: auto; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); margin: auto;"
               title=""></span></p>
         <p class="c14"><span class="c6">Sứ mệnh của Bảo Việt không chỉ dừng lại ở việc kinh doanh, chúng tôi còn mang
             tôn chỉ
@@ -229,8 +280,8 @@
         <p class="c4 c7"><span class="c2"></span></p>
         <p class="c4"><span
             style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 601.70px; height: 338.67px;"><img
-              alt="" src="images/image3.jpg"
-              style="width: 601.70px; height: 338.67px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
+              alt="" src="assets/tin-tuc/trachnhiemcongdong/image3.jpg"
+              style="width:100%; height: auto; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); margin: auto;"
               title=""></span></p>
         <p class="c4"><span class="c6">Bảo Việt Đà Nẵng luôn đặt sự quan tâm đến giáo dục và tổ chức nhiều chương trình
             thiện
@@ -239,15 +290,14 @@
         <p class="c4"><span>Bảo Việt Đà Nẵng cũng rất tự hào khi là đơn vị bảo hiểm uy tín được các bậc phụ huynh tin
             tưởng
             lựa chọn để gửi gắm ước mơ học hành cho con em mình một cách toàn diện và vững vàng nhất thông qua gói
-          </span><span class="c12 c8">
-            <a class="c10"
+          </span><span class="c12 c8"><a class="c10"
               href="https://www.google.com/url?q=https://baohiembaovietdanang.vn/baohiemantamhocvan.html&sa=D&source=editors&ust=1751024585164317&usg=AOvVaw2RaGDwUBcB0wsVB7Z2Gmxk">bảo
               hiểm</a></span><span class="c12"><a class="c10"
               href="https://www.google.com/url?q=https://baohiembaovietdanang.vn/baohiemantamhocvan.html&sa=D&source=editors&ust=1751024585164443&usg=AOvVaw3do0fegR4-Etf-wPiNq6N0">
             </a></span><span class="c12 c8">
-
-            <div class="c10">An
-              đáng tin cậy trong lòng mọi người.
+            <a href="./baohiemantamhocvan.html">An Tâm Học vấn</a>
+            đáng tin cậy trong lòng mọi người.
+            <div class="c10">
           </span></p>
         <h3 class="c3" id="h.t88cf7m0oa5i"><span class="c1">H&igrave;nh &#7843;nh th&#432;&#417;ng hi&#7879;u g&#7855;n
             v&#7899;i c&#7897;ng &#273;&#7891;ng</span></h3>
@@ -262,8 +312,8 @@
         <p class="c4 c7"><span class="c2"></span></p>
         <p class="c14"><span
             style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 601.70px; height: 338.67px;"><img
-              alt="" src="images/image4.jpg"
-              style="width: 601.70px; height: 338.67px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
+              alt="" src="assets/tin-tuc/trachnhiemcongdong/image4.jpg"
+              style="width:100%; height: auto; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); margin: auto;"
               title=""></span></p>
         <p class="c14"><span class="c6">S&#7913; m&#7879;nh c&#7911;a B&#7843;o Vi&#7879;t kh&ocirc;ng ch&#7881;
             d&#7915;ng
@@ -310,9 +360,9 @@
         <p class="c4 c7"><span class="c2"></span></p>
         <p class="c4"><span
             style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 601.70px; height: 338.67px;"><img
-              alt="" src="images/image3.jpg"
-              style="width: 601.70px; height: 338.67px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
-              title=""></span></p>
+              alt="" src="assets/tin-tuc/trachnhiemcongdong/image3.jpg"
+              style="width:100%; height: auto; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); margin: auto;"
+              title="" /></span></p>
         <p class="c4"><span class="c6">B&#7843;o Vi&#7879;t &#272;&agrave; N&#7861;ng lu&ocirc;n &#273;&#7863;t s&#7921;
             quan
             t&acirc;m &#273;&#7871;n gi&aacute;o d&#7909;c v&agrave; t&#7893; ch&#7913;c nhi&#7873;u ch&#432;&#417;ng
@@ -354,8 +404,8 @@
         <p class="c4 c7"><span class="c11 c0"></span></p>
         <p class="c4"><span
             style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 601.70px; height: 338.67px;"><img
-              alt="" src="images/image1.jpg"
-              style="width: 601.70px; height: 338.67px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
+              alt="" src="assets/tin-tuc/trachnhiemcongdong/image1.jpg"
+              style="width:100%; height: auto; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); margin: auto;"
               title=""></span></p>
         <p class="c4"><span class="c6">B&#7843;o Hi&#7875;m &ldquo;An T&acirc;m H&#7885;c V&#7845;n&rdquo; t&#7841;i
             B&#7843;o
@@ -527,6 +577,29 @@
     </div>
   </footer>
 </body>
+
+<script>
+  let currentIndex = 0;
+  const slides = document.querySelector(".slides");
+  const totalSlides = document.querySelectorAll(".slide").length;
+
+  function updateSlide() {
+    slides.style.transform = `translateX(-${currentIndex * 100}%)`;
+  }
+
+  function nextSlide() {
+    currentIndex = (currentIndex + 1) % totalSlides;
+    updateSlide();
+  }
+
+  function prevSlide() {
+    currentIndex = (currentIndex - 1 + totalSlides) % totalSlides;
+    updateSlide();
+  }
+
+  // Auto slide every 3 seconds
+  setInterval(nextSlide, 3000);
+</script>
 
 <script>
   function toggleMenu() {
